k8s/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: vprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: k8s-self-managed-503459125797-dev-memcached
          ports:
            - containerPort: 11211
          args: ["-m", "256", "-I", "2m"]
          readinessProbe:
            tcpSocket:
              port: 11211
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: vprofile
spec:
  selector:
    app: memcached
  ports:
    - name: memcached
      port: 11211
      targetPort: 11211
